# Projects

./: Cargo.toml  README.md  main.cpp  p07_new.ino
MiramontesRaymond_Monitor/: Cargo.toml  instalar.bat  main.rs  metricas.csv
MiramontesRaymond_Monitor/graficas_python/: analizar_metricas.py
interfaz_compilador/: ejecucion.py  interfaz.py  lexico.py  parser.out  parsetab.py  semantico.py  sintactico.py
src/: attacks.rs  communication.rs  gui.rs  logger.rs  main.rs
