[package]
name = "cyber_attack_simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.22.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num_cpus = "1.13"
sys-info = "0.9"
env_logger = "0.10"
rand = "0.8"

[dependencies.winapi]
version = "0.3"
features = [
    "winuser",
    "windef",
    "minwindef",
    "libloaderapi",
    "shellapi",
    "winerror"
]